--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Blogo do BRLTech",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemoon index.js"
   },
   "author": "ifCoder",
   "license": "ISC",
@@ -17,5 +18,8 @@
     "express-session": "^1.18.2",
     "mongoose": "^9.1.2",
     "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
